Added directive for weather information to clear up forecast controller and added error handling.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,12 @@ body{
   margin: 0;  
 } 
 
+.error {
+  color: red;
+  margin-left: 10px;
+  font-weight: bold;
+}
+
 .search-weather{
   margin-top:20px;
 }
